@@ -1,2 +1,5 @@
+2012-02-11 arnaud.fontaine
+* Add full-screen class meaningful when this will be accepted by W3C.
+
 2012-01-25 arnaud.fontaine
 * Initial release.
